--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>STATUP — Streamline Your Analysis</title>
+  <title>STATUP — Streamline Your Analysis, Elevate Your Decision.</title>
   <meta name="description" content="STATUP — learning & analytics support: statistics, data analysis, projects, workshops, test series and software training." />
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Crect width='24' height='24' rx='4' fill='%238CD65F'/%3E%3Ctext x='50%' y='50%' font-size='12' font-family='Arial' fill='%23000' dominant-baseline='middle' text-anchor='middle'%3EUP%3C/text%3E%3C/svg%3E">
