--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="logo.png" alt="STATUP logo" class="logo-img" style="height:48px;" onerror="this.style.display='none'">
         <div class="logo-text" style="line-height:1;">
           <strong style="font-size:18px;">STATUP</strong>
-          <small style="display:block;color:var(--muted);">Streamline Your Analysis</small>
+          <small style="display:block;color:var(--muted);">Streamline Your Analysis, Elevate Your Decision.</small>
         </div>
       </a>
 
@@ -114,7 +114,7 @@
       <div class="f-left">
         <a class="logo" href="index.html" style="display:flex;align-items:center;gap:12px;">
           <img src="logo.png" alt="STATUP logo" class="logo-img" style="height:38px;" onerror="this.style.display='none'">
-          <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis</small></div>
+          <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis, Elevate Your Decision.</small></div>
         </a>
         <p class="muted" style="margin-top:8px;">Streamline Your Analysis, Elevate Your Decision.</p>
       </div>
