--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       <div class="f-left">
         <a class="logo" href="index.html" style="display:flex;align-items:center;gap:12px;">
           <img src="logo.png" alt="STATUP logo" class="logo-img" style="height:38px;" onerror="this.style.display='none'">
-          <div class="logo-text"><strong>STATUP</strong><small>Streamline Your Analysis, Elevate Your Decision.</small></div>
+          <div class="logo-text"><strong>STATUP</strong><small></small></div>
         </a>
         <p class="muted" style="margin-top:8px;">Streamline Your Analysis, Elevate Your Decision.</p>
       </div>
